<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_item_cv"
    style="@style/AppTheme.Home"
    android:layout_width="@dimen/bitmapWidth"
    android:layout_height="@dimen/bitmapHeight"
    android:layout_marginBottom="16dp"
    card_view:cardBackgroundColor="@color/colorPrimaryLight"
    card_view:cardCornerRadius="4dp">


    <ImageView
        android:id="@+id/event_iv"
        android:layout_width="@dimen/bitmapWidth"
        android:layout_height="@dimen/bitmapHeight"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_associated_with_content"
        android:scaleType="center"

...
