<resources>
    <string name="app_name">KulTrójmiasto</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="map">Mapa wydarzeń</string>
    <string name="favorites">Ulubione</string>
    <string name="theater">teatr</string>
    <string name="cinema">kino</string>
    <string name="art">sztuka</string>
    <string name="music">muzyka</string>
    <string name="science">nauka</string>
    <string name="literature">literatura</string>
    <string name="entertainment">rozrywka</string>
    <string name="recreation">rekreacja</string>
    <string name="other">inne</string>
    <string name="all">wszystkie</string>
    <string name="date" translatable="false">date</string>
    <string name="tickets" translatable="false">tickets</string>
    <string name="image_associated_with_content" translatable="false">image associated with content</string>
    <string name="darmowe">darmowe</string>
    <string name="something">Brak połączenia z internetem</string>
    <string name="location">location</string>
    <string name="polub_co">Polub coś!</string>
    <string name="dzisiaj">dzisiaj</string>
    <string name="jutro">jutro</string>
    <string name="o_programie">O programie</string>
    <string name="about_text">Aplikacja powstała w oparciu o dane z portalu planer.info.pl. \n\nIkony stworzone przez: Freepik z www.flaticon.com, Nikita Golubev z www.flaticon.com - licencja CC 3.0 BY</string>
    <string name="author">Autor: Róża Kazenas \nE-mail: roza.kazenas@gmail.com</string>
    <string name="filtruj_wydarzenia" translatable="false">Filtruj wydarzenia</string>
    <string name="polityka_prywatno_ci" translatable="false">Polityka Prywatności</string>
</resources>
